# NiKob-s-proton-nn-upscaler

./: .gitignore  Cargo.toml  README.md  Taskfile.yaml  lefthook.yaml
injector/win64/: Cargo.toml  README.md
injector/win64/src/: lib.rs  main.rs
layer/test/: Cargo.toml
layer/test/src/: main.rs
layer/vk_layer/: Cargo.toml  README.md  build.rs  notes.md
layer/vk_layer/src/: VkLayer_nnus.json  VkLayer_nnus_only_link.json  lib.rs  storage.rs
layer/vk_layer/src/layer/: device.rs  instance.rs  mod.rs  private.rs
test/: Cargo.toml
test/src/: main.rs
